# finances_back

./: .gitignore  README.md  alembic.ini  create_tables.py  docker-compose.yaml  init-mongo.js  mongod.conf  pyproject.toml  setup.sh  test_mongo.py
app/: config.py  database.py  logger.py  main.py
app/core/: config.py  database.py
app/db/migrations/: env.py
app/db/migrations/versions/: 36cf3a803917_criar_categorias.py  7478ead0effe_criar_tabelas_categorias_e_subcategorias.py  8f8a4e668d34_primeira_versão_do_bd.py  f663715f5ec3_criar_tabela_transacoes.py
app/db/models/: __init__.py  categoria.py  transacao.py
app/db/repositories/: categoria.py  dashboard.py  limits.py  subcategoria.py  transacao.py
app/models/: categorias_model.py  limits_model.py  transacoes_model.py
app/routes/: categorias_routes.py  dashboard_routes.py  limits_routes.py  transacoes_routes.py
app/schemas/: categorias.py  dashboard.py  limits.py  subcategoria.py  transacao.py
logs/: financas_backend_structured.json
