[project]
name = "financas-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "pymongo[async]>=4.14.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
